# model-viewer

./: CMakeLists.txt  CMakePresets.json  impl.cpp  main.cpp  main.mm  pch.hpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
.github/workflows/scripts/: CMakeUserPresets.json
metal/: Renderer.h  Renderer.mm
utils/: algorithm.hpp  concepts.hpp  fastgltf.hpp  from_chars.hpp  functional.hpp  math.hpp  memory.hpp  numeric_cast.hpp  ranges.hpp  type_variant.hpp
vulkan/: Gpu.cpp  Gpu.hpp  Model.cpp  Model.hpp  Swapchain.cpp  Swapchain.hpp
